Refactored status codes, updated tests
